--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -265,7 +265,7 @@
 .ai.fa-pull-right {
   margin-left: .3em;
 }
-/*  
+/*
  *  Repeat of the FontAwesome style classes to prevent override if academicons.css
  *  is called after font-awesome.css.
  */
@@ -324,4 +324,11 @@
 }
 .fa.fa-pull-right {
   margin-left: .3em;
+}
+/* Add this to your CSS file */
+.publication-content {
+  text-align: justify; /* Justify the text to distribute it evenly */
+  margin: 0 auto; /* Center the content horizontally */
+  max-width: 800px; /* Set a maximum width for better readability */
+  padding: 20px; /* Add some padding for spacing */
 }
