--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -326,7 +326,7 @@
   margin-left: .3em;
 }
 /* Add this to your CSS file */
-.publication-content {
+.excerpt-content {
   text-align: justify; /* Justify the text to distribute it evenly */
   margin: 0 auto; /* Center the content horizontally */
   max-width: 800px; /* Set a maximum width for better readability */
