--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -5,7 +5,8 @@
     <h4 class="page__share-title">{{ site.data.ui-text[site.locale].share_on_label | default: "Share on" }}</h4>
   {% endif %}
 
-  <a href="https://twitter.com/intent/tweet?text={{ base_path }}{{ page.url }}" class="btn btn--twitter" title="{{ site.data.ui-text[site.locale].share_on_label | default: 'Share on' }} Twitter"><i class="fab fa-twitter" aria-hidden="true"></i><span> Twitter</span></a>
+  <!-- Replace Twitter with YouTube -->
+  <a href="https://www.youtube.com/share?url=https://www.youtube.com/watch?v=VIDEO_ID" class="btn btn--youtube" title="Share on YouTube"><i class="fab fa-youtube" aria-hidden="true"></i><span> YouTube</span></a>
 
   <a href="https://www.facebook.com/sharer/sharer.php?u={{ base_path }}{{ page.url }}" class="btn btn--facebook" title="{{ site.data.ui-text[site.locale].share_on_label | default: 'Share on' }} Facebook"><i class="fab fa-facebook" aria-hidden="true"></i><span> Facebook</span></a>
 
