--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -11,7 +11,7 @@
   @include clearfix;
   margin-top: 0;
   margin-bottom: 0;
-  padding-left: 2em;
+  padding-left: 10em;
   padding-right: 2em;
   font-family: $sans-serif;
   -webkit-animation: intro 0.3s both;
@@ -20,7 +20,7 @@
           animation-delay: 0.30s;
 
   @include breakpoint($large) {
-    padding-left: 1em;
+    padding-left: 10em;
     padding-right: 1em;
   }
 
@@ -72,7 +72,7 @@
   li {
     display: block;
     float: left;
-    margin-left: -1px;
+    margin-left: 0px;
 
     a {
       margin-bottom: 0.25em;
@@ -83,17 +83,17 @@
       line-height: 1.5;
       text-align: center;
       text-decoration: none;
-      color: mix(#fff, $gray, 25%);
+      color: $white;
       border: 1px solid $light-gray;
       border-radius: 0;
 
       &:hover {
-        color: $link-color-hover;
+        color: $lighter-gray;
       }
 
       &.current {
         color: #fff;
-        background: $primary-color;
+        background: $lighter-gray;
       }
 
       &.disabled {
@@ -103,8 +103,8 @@
       }
     }
 
-    &:first-child {
-      margin-left: 0;
+    li:first-child {
+      margin-left: 10em;
 
       a {
         border-top-left-radius: $border-radius;
@@ -131,8 +131,8 @@
     font-weight: bold;
     text-align: center;
     text-decoration: none;
-    color: mix(#fff, $gray, 50%);
-    border: 1px solid $light-gray;
+    color: $lighter-gray;
+    border: 2px solid $dark-orange;
     border-radius: $border-radius;
 
     &:hover {
@@ -174,14 +174,14 @@
 
 .greedy-nav {
   position: relative;
-  min-width: 250px;
-  background: $background-color;
+  min-width: 500px;
+  background: $darker-orange;
 
   a {
     display: block;
-    margin: 0 1rem;
+    margin: 0 2.75rem;
     padding: 0.5rem 0;
-    color: $masthead-link-color;
+    color: $white;
     text-decoration: none;
 
     &:hover {
@@ -192,11 +192,11 @@
   button {
     position: absolute;
     height: 100%;
-    right: 0;
+    right: 0.5rem;
     padding: 0 0.5rem;
     border: 0;
     outline: none;
-    background-color: $primary-color;
+    background-color: $dark-orange;
     color: #fff;
     cursor: pointer;
   }
