--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -50,14 +50,20 @@ $type-size-8                : 0.625em;  // ~10px
 $gray                       : #7a8288;
 $dark-gray                  : mix(#000, $gray, 40%);
 $darker-gray                : mix(#000, $gray, 60%);
-$light-gray                 : mix(#fff, $gray, 50%);
-$lighter-gray               : mix(#fff, $gray, 90%);
+$light-gray                 : mix(#fff, $gray, 25%);
+$lighter-gray               : mix(#fff, $gray, 70%);
+$white                      : #ffffff;
+$orange: #ff9900;
+$darker-orange: #ff6600;
+$light-orange: #ffcc66;
+$dark-orange: #80391e;
+$black: #000000;
 
 $body-color                 : #fff;
-$background-color           : #fff;
+$background-color           : #000000;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
-$text-color                 : $dark-gray;
+$text-color                 : $lighter-gray;
 $border-color               : $lighter-gray;
 
 $primary-color              : #7a8288;
