--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -58,6 +58,8 @@ $darker-orange: #ff6600;
 $light-orange: #ffcc66;
 $dark-orange: #80391e;
 $black: #000000;
+$Blue: #00ace6;
+$Light-blue: #1ac6ff;
 
 $body-color                 : #fff;
 $background-color           : #000000;
