--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -232,7 +232,7 @@
         left: 0;
         bottom: 0;
         height: 4px;
-        background: mix(#fff, $primary-color, 50%);
+        background: $darker-orange;
         width: 100%;
         -webkit-transition: $global-transition;
         transition: $global-transition;
@@ -257,7 +257,7 @@
     padding: 5px;
     border: 1px solid $border-color;
     border-radius: $border-radius;
-    background: #fff;
+    background: $darker-orange;
     box-shadow: 0 0 10px rgba(#000, 0.25);
 
     a {
@@ -267,7 +267,7 @@
 
       &:hover {
         color: $masthead-link-color-hover;
-        background: mix(#fff, $primary-color, 75%);
+        background: $darker-orange;
       }
     }
 
@@ -374,7 +374,7 @@
   color: $darker-orange;
   text-transform: uppercase;
   letter-spacing: 1px;
-  background-color: #fff;
+  background-color: $darker-orange;
   border: 1px solid $border-color;
   border-radius: $border-radius;
   box-shadow: $box-shadow;
